--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        * {padding: 0px; margin: auto;}
+        /* * {padding: 0px; margin: auto;} */
         .wrapper {width: 1089px;height: 800px;background-color: antiquewhite;}
         header{width: 1089px;height: 150px;background-color: rgb(136, 103, 59);}
         nav {width: 1089px;height: 50px;background-color: antiquewhite}
